--- a/text.html
+++ b/text.html
@@ -10,7 +10,7 @@
 <body>
    
         <h4 class="jour">Sunday</h4>
-        <p class="date">05 Ohjhghgggssss</p>
+        <p class="date">05 October 2024</p>
         <img src="../Weather App/e9f26bc973a110dba9dd4b38d08d6cbd-removebg-preview.png" alt="button dark/light" width="100px">
     <form class="weatherForm">
         <input type="text" id="cityInput" placeholder="Search by City Name">
